# geodesic_design

./: .gitignore  Makefile  README.md  plots.ipynb  pyproject.toml
gnd/src/: utils.py
notebooks/: plots.ipynb  qutrit.ipynb
src/gnd/: basis.py  cli.py  data.py  hamiltonians.py  optimize.py  unitaries.py  utils.py
